fix fraction align center not good

--- a/src/styles/scss/tradingPage.scss
+++ b/src/styles/scss/tradingPage.scss
@@ -258,10 +258,6 @@
       justify-content: space-between;
       position: relative;
 
-      label.bp3-label {
-        margin-top: -5px;
-        margin-bottom: 0;
-      }
 
       &:after {
         content: "";
@@ -443,11 +439,6 @@
       flex-direction: row;
       justify-content: space-between;
       position: relative;
-
-      label.bp3-label {
-        margin-top: -5px;
-        margin-bottom: 0;
-      }
 
       &:after {
         content: "";
